@@ -1,34 +1,35 @@
 \encoding{UTF-8}
 \name{rank.affinity}
 \alias{rank.affinity}
-\title{Normalized Sums of Ranks of Chemical Affinities}
+\title{Average Ranks of Chemical Affinities}
 \description{
-Affinity ranking for groups of species.
+Affinity rankings for groups of species.
 }
 
 \usage{
-  rank.affinity(aout, groups)
+  rank.affinity(aout, groups, percent = TRUE)
 }
 
 \arguments{
   \item{aout}{list, output of \code{\link{affinity}}}
   \item{groups}{named list of indices (integer or numeric) for species in each group}
+  \item{percent}{return average rank percentage for each group}
 }
 
 \details{
-The following calculations are applied to each set of conditions (i.e., grid point if \code{\link{affinity}} was called with two variables).
-The \code{\link{rank}}s of affinities for all species are first computed.
-Then, the ranks for the species in each group are summed and divided by the number of species in that group (this is the normalization step).
+The affinities for all species are \code{\link{rank}}ed, then the mean ranking for the species in each group is calculated.
+The mean rankings of groups are converted to a percentage, or returned as-is if \code{percent} is FALSE.
+Note that the calculations are applied to each set of conditions individually (i.e., each grid point in the affinity \code{\link{affinity}} calculation).
 }
 
 \value{
-The normalized sum of ranks are inserted into the \code{values} element of \code{aout}, and the names of the groups are inserted into the \code{species} element.
-The result can be used by \code{\link{diagram}} to show the groups with the highest normalized sum of ranks.
+The average rankings are inserted into the \code{values} element of \code{aout}, and the names of the groups are inserted into the \code{species} element.
+The result can be used by \code{\link{diagram}} to make line plots or predominance diagrams (the predominance fields correspond to the groups with highest average ranking of affinity).
 }
 
 \note{
 The reaction coefficients in the \code{species} element of the returned value of \code{aout} are not valid.
-Because balancing on a basis species (i.e., dividing by its reaction coefficient) would be incorrect, \code{diagram} enforces \code{balance = 1} so that that the normalized sums of ranks are used as-is.
+Because balancing on a basis species (i.e., dividing by its reaction coefficient) would be incorrect, \code{diagram} enforces \code{balance = 1} so that that average rankings are used without further modification.
 }
 
 \seealso{
